# facebook-groups-apartment-scraper

./: .env.example  .gitignore  .mcp.json  Dockerfile  README.md  docker-compose.yml  groups_found.yaml  pyproject.toml
.claude/: settings.local.json
app/: main.py  settings.py
app/browser/: context.py  login_check.py  navigation.py
app/classifier/: ai_extractor.py  apartment_rules.py  llm_extractor.py  scoring.py
app/facebook/: comment_extractor.py  group_reader.py  image_extractor.py  models.py  post_extractor.py  selectors.py
app/notifier/: telegram.py  webhook.py
app/storage/: db.py  repository.py  schema.py
app/utils/: hashing.py  logging.py  text.py  time.py
config/: criteria.yaml  groups.yaml
facebook_group_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
runtime/fb-profile/: Last Browser  Local State
runtime/fb-profile/Default/: DIPS  Favicons  History  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Web Data  passkey_enclave_state
runtime/fb-profile/GrShaderCache/: data_0  data_1  data_2  f_000001  f_000002  f_000003  f_000004  (+68 more)
runtime/network_debug/: response_000.txt  response_001.txt  response_002.txt  response_003.txt  response_004.txt  response_005.txt  response_006.txt  response_007.txt  response_008.txt  response_009.txt  response_010.txt  response_011.txt  response_012.txt
scripts/: create_schema.sql  debug_group.py  debug_network.py  export_recent.py  find_groups.py  get_chat_id.py  init_login.py  merge_groups_found.py  run_once.py
tests/: test_hashing.py  test_scoring.py  test_text_normalization.py
(+1502 files in other folders)
