[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "facebook-group-scraper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "rapidfuzz>=3.6",
    "httpx>=0.27",
    "python-telegram-bot>=21.0",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "imagehash>=4.3",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
